Fix: Opened menu on mobile covers whole screen

--- a/app/components/Navbar/Navbar.module.css
+++ b/app/components/Navbar/Navbar.module.css
@@ -183,6 +183,6 @@
 }
 
 .menuOpen {
-  max-height: 100dvh;
+  max-height: 100vh;
   background-color: var(--color-open-navbar);
 }
